# ros_basics

pkg_roscpp/: CMakeLists.txt  package.xml
pkg_roscpp/launch/: client-server.launch  publisher-subscriber.launch
pkg_roscpp/msg/: simple_msg.msg
pkg_roscpp/src/: client.cpp  publisher.cpp  publisher_msg.cpp  server.cpp  simple_action_client.cpp  simple_action_client_all.cpp  simple_action_server.cpp  simple_action_server_all.cpp  subscriber.cpp  subscriber_msg.cpp
pkg_rospy/: CMakeLists.txt  package.xml
pkg_rospy/action/: CountNumbers.action
pkg_rospy/scripts/: client.py  publisher.py  publisher_msg.py  server.py  simple_action_client.py  simple_action_client_all.py  simple_action_server.py  simple_action_server_all.py  subscriber.py  subscriber_msg.py
