<?xml version="1.0"?>
<package format="2">
  <name>pkg_rospy</name>
  <version>0.0.0</version>
  <description>The pkg_rospy package</description>
  <maintainer email="dammala.aakash@gmail.com">melodic</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  
</package>
